--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,12 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="AppTheme.Dialog.FullScreen" parent="ThemeOverlay.MaterialComponents.Dialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowBackground">@android:color/background_light</item>
+
+    </style>
+
     <style name="AppTheme.DialogAnimation">
         <item name="android:windowEnterAnimation">
             @anim/enterslideup
