--- a/app/src/main/res/menu/createuser.xml
+++ b/app/src/main/res/menu/createuser.xml
@@ -3,7 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/load"
+        android:icon="@drawable/ic_baseline_cloud_download_24"
+        android:title="@string/load"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/save"
         android:title="@string/save"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
